progressif/main/default/objects/Contracts__c/Contracts__c.object-meta.xml
<CustomObject>
    <label>Contrat</label>
    <nameField>
        <displayFormat>20-{0000000000}</displayFormat>
        <label>N° Contrat</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contrats</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>