progressif/main/default/objects/Contracts__c/fields/ClosingDate__c.field-meta.xml
<CustomField>
    <fullName>ClosingDate__c</fullName>
    <label>Date de clôture</label>
    <type>Date</type>
</CustomField>