progressif/main/default/objects/Contracts__c/fields/ContractEndDate__c.field-meta.xml
<CustomField>
    <fullName>ContractEndDate__c</fullName>
    <defaultValue>(ADDMONTHS(TODAY(),12)) - 1</defaultValue>
    <label>Date de fin de contrat</label>
    <required>true</required>
    <type>Date</type>
</CustomField>