progressif/main/default/objects/Contracts__c/fields/ContractPayer__c.field-meta.xml
<CustomField>
    <fullName>ContractPayer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Permet d&#39;envoyer la Facture au bon Compte</inlineHelpText>
    <label>Payeur</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Payeur</relationshipLabel>
    <relationshipName>ContractPayer</relationshipName>
    <type>Lookup</type>
</CustomField>