progressif/main/default/objects/Contracts__c/fields/ContractStartingDate__c.field-meta.xml
<CustomField>
    <fullName>ContractStartingDate__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <label>Date de début du contrat</label>
    <type>Date</type>
</CustomField>