progressif/main/default/objects/Contracts__c/fields/EffectiveDateTermination__c.field-meta.xml
<CustomField>
    <fullName>EffectiveDateTermination__c</fullName>
    <label>Date d&#39;effet de résiliation</label>
    <type>Date</type>
</CustomField>