progressif/main/default/objects/Contracts__c/fields/GeneratingEvent__c.field-meta.xml
<CustomField>
    <fullName>GeneratingEvent__c</fullName>
    <description>Indique la source de détection du nouveau contrat. Exemple si c&#39;est une demande faite par le client sur le portail, si c&#39;est suite à un appel du client...</description>
    <label>Fait générateur</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Portail</fullName>
                <label>1</label>
            </value>
            <value>
                <fullName>Téléphone</fullName>
                <label>2</label>
            </value>
            <value>
                <fullName>Email</fullName>
                <label>3</label>
            </value>
            <value>
                <fullName>Campagne marketing</fullName>
                <label>4</label>
            </value>
            <value>
                <fullName>Activité terrain</fullName>
                <label>5</label>
            </value>
            <value>
                <fullName>Courrier</fullName>
                <label>6</label>
            </value>
            <value>
                <fullName>KeyWatch</fullName>
                <label>7</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>