progressif/main/default/objects/Contracts__c/fields/MeansPayment__c.field-meta.xml
<CustomField>
    <fullName>MeansPayment__c</fullName>
    <label>Moyen de paiement</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Espèce</fullName>
                <label>1</label>
            </value>
            <value>
                <fullName>Chèque</fullName>
                <label>2</label>
            </value>
            <value>
                <fullName>prélèvement SDD</fullName>
                <label>3</label>
            </value>
            <value>
                <fullName>Carte bancaire</fullName>
                <label>4</label>
            </value>
            <value>
                <fullName>Prélèvement automatique SEPA (PBA)</fullName>
                <label>5</label>
            </value>
            <value>
                <fullName>Virement</fullName>
                <label>6</label>
            </value>
            <value>
                <fullName>Billet à ordre</fullName>
                <label>7</label>
            </value>
            <value>
                <fullName>Mandat</fullName>
                <label>8</label>
            </value>
            <value>
                <fullName>TIP</fullName>
                <label>9</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>