progressif/main/default/objects/Contracts__c/fields/OrganizationalUnit__c.field-meta.xml
<CustomField>
    <fullName>OrganizationalUnit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Unité organisationnelle</label>
    <referenceTo>Unite_organisationnelle__c</referenceTo>
    <relationshipLabel>Contrats</relationshipLabel>
    <relationshipName>ChildContract1</relationshipName>
    <type>Lookup</type>
</CustomField>