progressif/main/default/objects/Contracts__c/fields/ReasonsTermination__c.field-meta.xml
<CustomField>
    <fullName>ReasonsTermination__c</fullName>
    <label>Motif de résiliation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Dénonciation de contrat par la Sacem</fullName>
                <label>1</label>
            </value>
            <value>
                <fullName>Fermeture administrative</fullName>
                <label>2</label>
            </value>
            <value>
                <fullName>Erreur d&#39;autorisation</fullName>
                <label>3</label>
            </value>
            <value>
                <fullName>Intervention non motivée</fullName>
                <label>4</label>
            </value>
            <value>
                <fullName>Modification de déclaration</fullName>
                <label>5</label>
            </value>
            <value>
                <fullName>Autre</fullName>
                <label>6</label>
            </value>
            <value>
                <fullName>A</fullName>
                <isActive>false</isActive>
                <label>A</label>
            </value>
            <value>
                <fullName>B</fullName>
                <isActive>false</isActive>
                <label>B</label>
            </value>
            <value>
                <fullName>C</fullName>
                <isActive>false</isActive>
                <label>C</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>