progressif/main/default/objects/Contracts__c/fields/RefusalACCOS__c.field-meta.xml
<CustomField>
    <fullName>RefusalACCOS__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicateur positionné si le client refuse de payer la part qui revient à l&#39;Agence Centrale des Organismes de Sécurité Sociale</description>
    <label>Refus ACCOS</label>
    <type>Checkbox</type>
</CustomField>