progressif/main/default/objects/Contracts__c/fields/Renewable__c.field-meta.xml
<CustomField>
    <fullName>Renewable__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Renouvelable</label>
    <type>Checkbox</type>
</CustomField>