progressif/main/default/objects/Contracts__c/fields/SACEMBillingAccount__c.field-meta.xml
<CustomField>
    <fullName>SACEMBillingAccount__c</fullName>
    <label>Compte de facturation SACEM</label>
    <length>255</length>
    <type>Text</type>
</CustomField>