progressif/main/default/objects/Contracts__c/fields/SACEMPurchaseOrderNumber__c.field-meta.xml
<CustomField>
    <fullName>SACEMPurchaseOrderNumber__c</fullName>
    <label>N° de bon de commande SACEM</label>
    <length>255</length>
    <type>Text</type>
</CustomField>