progressif/main/default/objects/Contracts__c/fields/SDRMBillingAccount__c.field-meta.xml
<CustomField>
    <fullName>SDRMBillingAccount__c</fullName>
    <label>Compte de facturation SDRM</label>
    <length>255</length>
    <type>Text</type>
</CustomField>