progressif/main/default/objects/Contracts__c/fields/SDRMPurchaseOrderNumber__c.field-meta.xml
<CustomField>
    <fullName>SDRMPurchaseOrderNumber__c</fullName>
    <label>N° de bon de commande SDRM</label>
    <length>255</length>
    <type>Text</type>
</CustomField>