progressif/main/default/objects/Contracts__c/fields/SignatureDate__c.field-meta.xml
<CustomField>
    <fullName>SignatureDate__c</fullName>
    <label>Date de signature</label>
    <type>Date</type>
</CustomField>