progressif/main/default/objects/Contracts__c/fields/SPREBillingAccount__c.field-meta.xml
<CustomField>
    <fullName>SPREBillingAccount__c</fullName>
    <label>Compte de facturation SPRE</label>
    <length>255</length>
    <type>Text</type>
</CustomField>