progressif/main/default/objects/Contracts__c/fields/SPREPurchaseOrderNumber__c.field-meta.xml
<CustomField>
    <fullName>SPREPurchaseOrderNumber__c</fullName>
    <label>N° de bon de commande SPRE</label>
    <length>255</length>
    <type>Text</type>
</CustomField>