progressif/main/default/objects/Contracts__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Statut</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>En cours</fullName>
                <default>true</default>
                <label>1</label>
            </value>
            <value>
                <fullName>Activé</fullName>
                <label>2</label>
            </value>
            <value>
                <fullName>Expiré</fullName>
                <label>3</label>
            </value>
            <value>
                <fullName>Résilié</fullName>
                <label>4</label>
            </value>
            <value>
                <fullName>Annulé</fullName>
                <label>5</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>