progressif/main/default/objects/Contracts__c/fields/TECH_ContratId__c.field-meta.xml
<CustomField>
    <fullName>TECH_ContratId__c</fullName>
    <externalId>true</externalId>
    <label>TECH_ContratId</label>
    <length>50</length>
    <type>Text</type>
</CustomField>