progressif/main/default/objects/Contracts__c/fields/TECH_ContratNumberModifier__c.field-meta.xml
<CustomField>
    <fullName>TECH_ContratNumberModifier__c</fullName>
    <externalId>true</externalId>
    <label>TECH_ContratNumberModifier</label>
    <length>20</length>
    <type>Text</type>
</CustomField>