progressif/main/default/objects/Contracts__c/fields/TECH_CustomerGroup__c.field-meta.xml
<CustomField>
    <fullName>TECH_CustomerGroup__c</fullName>
    <formula>TEXT(OrganizationalUnit__r.group_of_customers__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TECH_CustomerGroup</label>
    <type>Text</type>
</CustomField>