progressif/main/default/objects/Contracts__c/fields/TECH_EditSignatureDate__c.field-meta.xml
<CustomField>
    <fullName>TECH_EditSignatureDate__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Lorsque le statut passe de &quot;En cours&quot; à &quot;Actif&quot; et que la date de signature du contrat n&#39;est pas renseignée, renseigner la date de signature par la date du jour et le champ TECH_EditSignatureDate passe à vrai</description>
    <label>TECH EditSignatureDate</label>
    <type>Checkbox</type>
</CustomField>