progressif/main/default/objects/Contracts__c/fields/UnderRaisons__c.field-meta.xml
<CustomField>
    <fullName>UnderRaisons__c</fullName>
    <label>Sous motif</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>ReasonsTermination__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A cessé son activité</fullName>
                <label>1</label>
            </value>
            <value>
                <fullName>Défaut de paiement</fullName>
                <label>2</label>
            </value>
            <value>
                <fullName>Réclamation auteur/éditeur</fullName>
                <label>3</label>
            </value>
            <value>
                <fullName>Oeuvre dénaturée/Non-respect du droit moral</fullName>
                <label>4</label>
            </value>
            <value>
                <fullName>Domaine public</fullName>
                <label>5</label>
            </value>
            <value>
                <fullName>Exception pédagogie</fullName>
                <label>6</label>
            </value>
            <value>
                <fullName>Dérogation auteur</fullName>
                <label>7</label>
            </value>
            <value>
                <fullName>Liquidation</fullName>
                <label>8</label>
            </value>
            <value>
                <fullName>Dissolution</fullName>
                <label>9</label>
            </value>
            <value>
                <fullName>Redressement</fullName>
                <label>10</label>
            </value>
            <value>
                <fullName>Opposition à vente</fullName>
                <label>11</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>