progressif/main/default/objects/Contracts__c/fields/VersionNumber__c.field-meta.xml
<CustomField>
    <fullName>VersionNumber__c</fullName>
    <defaultValue>01</defaultValue>
    <label>N° Version</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>