progressif/main/default/objects/Contracts__c/recordTypes/OnlineContract.recordType-meta.xml
<RecordType>
    <fullName>OnlineContract</fullName>
    <active>true</active>
    <label>Contrat Online</label>
</RecordType>