progressif/main/default/objects/Contracts__c/recordTypes/ReseauContract.recordType-meta.xml
<RecordType>
    <fullName>ReseauContract</fullName>
    <active>true</active>
    <label>Contrat Réseau</label>
</RecordType>