progressif/main/default/objects/Contracts__c/validationRules/CTR01_AccountType_Prospect.validationRule-meta.xml
<ValidationRule>
    <fullName>CTR01_AccountType_Prospect</fullName>
    <active>true</active>
    <description>Le CC ne peut pas créer un contrat pour un compte prospect désactivé</description>
    <errorConditionFormula>ISNEW() &amp;&amp; ISPICKVAL(AccountName__r.Type  ,&quot;Prospect&quot;) &amp;&amp;
ISPICKVAL( AccountName__r.Status__c , &quot;Désactivé&quot;) &amp;&amp; 
NOT ($User.BypassVR__c)</errorConditionFormula>
    <errorMessage>Vous ne pouvez pas créer de contrat car ce compte est désactivé</errorMessage>
</ValidationRule>