progressif/main/default/objects/Contracts__c/validationRules/CTR02_VersionNumber.validationRule-meta.xml
<ValidationRule>
    <fullName>CTR02_VersionNumber</fullName>
    <active>true</active>
    <errorConditionFormula>VersionNumber__c = 0</errorConditionFormula>
    <errorDisplayField>VersionNumber__c</errorDisplayField>
    <errorMessage>Le N° version doit être different de 0</errorMessage>
</ValidationRule>