progressif/main/default/objects/Contracts__c/validationRules/CTR03_SignatureDate.validationRule-meta.xml
<ValidationRule>
    <fullName>CTR03_SignatureDate</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
NOT(ISPICKVAL(Status__c, &quot;En cours&quot;)),
NOT(ISBLANK(SignatureDate__c)),
ISCHANGED(SignatureDate__c),
TECH_EditSignatureDate__c = true,
$User.BypassVR__c = false,
NOT( $Profile.Id = &quot;00e1t000001d6p5&quot;)
)</errorConditionFormula>
    <errorMessage>Merci de ne pas modifier la date de signature si le statut est différent de &quot;En cours &quot; et la date de signature est déja renseignée.</errorMessage>
</ValidationRule>