progressif/main/default/objects/Contracts__c/validationRules/CTR04_Statut_CancellationContract.validationRule-meta.xml
<ValidationRule>
    <fullName>CTR04_Statut_CancellationContract</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(ISPICKVAL(PRIORVALUE(Status__c),&quot;En cours&quot;))
&amp;&amp; ISCHANGED(Status__c )
&amp;&amp; ISPICKVAL ( Status__c ,&quot;Annulé&quot;)
&amp;&amp; $User.BypassVR__c = false</errorConditionFormula>
    <errorMessage>Merci de ne pas passer au statut &quot;Annulé &quot; si le statut n&#39;est pas &quot;En cours&quot;</errorMessage>
</ValidationRule>