progressif/main/default/objects/Contracts__c/validationRules/CTR05_Statut_NochangeCCOnline.validationRule-meta.xml
<ValidationRule>
    <fullName>CTR05_Statut_NochangeCCOnline</fullName>
    <active>true</active>
    <errorConditionFormula>AND ( 
$Profile.Id = &quot;00e1w000000M4zO&quot;, 
ISPICKVAL( Status__c , &quot;Activé&quot;),
ISCHANGED(Status__c))</errorConditionFormula>
    <errorMessage>Merci de ne pas passer au statut &quot; Activé&quot; manuellement</errorMessage>
</ValidationRule>