progressif/main/default/objects/Contracts__c/validationRules/CTR06_ContractEndDate.validationRule-meta.xml
<ValidationRule>
    <fullName>CTR06_ContractEndDate</fullName>
    <active>true</active>
    <errorConditionFormula>ContractEndDate__c &lt;=  ContractStartingDate__c</errorConditionFormula>
    <errorMessage>Merci de renseigner la date de fin de contrat supérieure à la date de début de contrat</errorMessage>
</ValidationRule>