progressif/main/default/objects/Contracts__c/validationRules/CTR07_ContractTermination.validationRule-meta.xml
<ValidationRule>
    <fullName>CTR07_ContractTermination</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISBLANK(TEXT( ReasonsTermination__c )), 
ISPICKVAL( Status__c , &quot;Résilié&quot;),
 $User.BypassVR__c =False 

)</errorConditionFormula>
    <errorMessage>Si le statut du contrat est &quot; Résilié&quot; , merci de renseigner le motif de résiliation.</errorMessage>
</ValidationRule>