progressif/main/default/objects/Contracts__c/validationRules/CTR08_Others.validationRule-meta.xml
<ValidationRule>
    <fullName>CTR08_Others</fullName>
    <active>true</active>
    <errorConditionFormula>$User.BypassVR__c =False &amp;&amp;
(ISPICKVAL( ReasonsTermination__c ,&quot;Autre&quot;) &amp;&amp; ISBLANK(  Other__c  )
 || 
ISPICKVAL( ReasonsTermination__c ,&quot;Modification de déclaration&quot;)&amp;&amp;
ISBLANK(  Other__c  )
 || 
ISPICKVAL( ReasonsTermination__c ,&quot;Erreur d&#39;autorisation&quot;)
&amp;&amp; ISBLANK(  Other__c  ))</errorConditionFormula>
    <errorMessage>Merci de saisir un sous motif dans le champ &quot;Autre&quot; pour ce motif de résiliation</errorMessage>
</ValidationRule>