progressif/main/default/objects/Contracts__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>AccountName__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>Tous les contrats</label>
</ListView>