progressif/main/default/objects/Contracts__c/listViews/NetworkContracts.listView-meta.xml
<ListView>
    <fullName>NetworkContracts</fullName>
    <columns>NAME</columns>
    <columns>VersionNumber__c</columns>
    <columns>ContractStartingDate__c</columns>
    <columns>ContractEndDate__c</columns>
    <columns>Status__c</columns>
    <columns>AccountName__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Contracts__c.ReseauContract</value>
    </filters>
    <label>Contrats réseaux</label>
</ListView>