progressif/main/default/objects/Contracts__c/listViews/NonActiveContracts.listView-meta.xml
<ListView>
    <fullName>NonActiveContracts</fullName>
    <columns>NAME</columns>
    <columns>VersionNumber__c</columns>
    <columns>ContractStartingDate__c</columns>
    <columns>ContractEndDate__c</columns>
    <columns>Status__c</columns>
    <columns>AccountName__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Expiré,Résilié,Annulé</value>
    </filters>
    <label>Contrats non actifs</label>
</ListView>